--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <!-- CONTENT 1 -->
         <div class="container-content">
-            <a href="https://youtube.com/deaafrizal" 
+            <a href="https://youtube.com/rhubengeolardo" 
             class="a-content">
                 <img src="download.jpg" class="img-content" />
                 <p>MAMPIR KE YOUTUBE YU!</p>
